# LEDDimmerServer

./: .coverage  .gitignore  LEDDimmerServer.py  LEDDimmerServer.service  LEDDimmerServer_service.sh  README.md  codecov.yml  led_dimmer_server.service  pyproject.toml  python_dependencies.txt  requirements.txt  setup.py  update_service.sh
.github/workflows/: codecov.yml  publish_stable_on_pypi.yml  publish_test_on_pypi_test.yml  python-app.yml  python-publish.yml
config/: colors.json  config.json  gradient.json  preseets.json  presets.json
src/: HTTPHandler.py  LEDDimmerServer.py  color.py  config.py
src/LEDDimmerServer/: DimmerBackend.py  HTTPHandler.py  LEDDimmer.py  LEDDimmerServer.py  Wakeup.py  __init__.py  __main__.py  __version__.py  color.py  utc.py  utils.py
src/LEDDimmerServer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/leddimmerserver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.py  test_color.py  test_dimmer_backend_common.py  test_http.py  test_rgb.py  test_rgb_w.py  test_w.py
