[project]
name = "leddimmerserver"
version = "0.1.0"
description = "A server for controlling LED dimmers"
authors = [
    { name="Michael", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []
include = ["config/*.json"]


optional-dependencies = {
    test = [
        "unittest",
    ]
}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"