[project]
name = "leddimmerserver"
version = "0.1.0"
description = "A server for controlling LED dimmers"
authors = [
    { name="terminator", email="the.terminator.ger@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["LEDDimmerServer"]

[tool.setuptools.package-data]
config = ["config/*.json"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"