[project]
name = "leddimmerserver"
description = "A server for controlling LED dimmers"
authors = [
    { name="terminator", email="the.terminator.ger@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["LEDDimmerServer"]

[tool.setuptools.package-data]
config = ["config/*.json"]


[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/LEDDimmerServer/__version__.py"

